--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 							<p>Nic tak nie dopełnia uwodzicielskiego zapachu jak zjawiskowy zestaw biżuterii.</p>
 							<p>W Beatris pomogę dobrać nie tylko pefrumy do Twojej osobowości ale i biżuterię handmade, której nie będzie miał nikt inny - tylko Ty</p>
 							<p>Daj się ponieść swojemu wewnętrznemu pięknu.</p>
+							<p>Pomimo tego, że mamy wiele wzorów i kolorów do wyboru każdy wisiorek czy para kolczyków jest inna więc masz pewność, że nikt inny nie będzie miał takiego samego zestawu jak Ty. Poczuj się wyjątkowo z naszą biżuterią.</p>
 						</div>
 					</div>
 				</div>
