--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<p>W Beatris wiemy, że to kobieta zdobi perfumy a nie na odwrót.</p>
 							<p>Od lat użytkujemy pefumy Tanellis i to zauroczenie przeistoczyło się w chęć dzielenia się z innymi.</p>
 							<p>Stąd właśnie powstał pomysł na nasz lokal. Zapraszamy, przekonaj się, że najpiękniejsze zapachy świata są na Twoją kieszeń. 
-								Już od 39zł możesz wyjść z Beatris z pięknymi perfumami.</p>
+								Już od 39zł za 30 ml możesz wyjść z Beatris z pięknymi perfumami. A nasza oferta? Mamy ponad 100 zapachów do wyboru - napewno znajdziesz coś dla siebie.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
