--- a/index.html
+++ b/index.html
@@ -36,14 +36,40 @@
 								<h2>Perfumy Tanellis<br />
 								trwałe magiczne zapachy w rozsądnej cenie</h2>
 							</header>
-							<p>W Beatris wiemy, że to kobieta zdobi perfumy a nie na odwrót.</p>
-							<p>Od lat użytkujemy pefumy Tanellis i to zauroczenie przeistoczyło się w chęć dzielenia się z innymi.</p>
-							<p>Stąd właśnie powstał pomysł na nasz lokal. Zapraszamy, przekonaj się, że najpiękniejsze zapachy świata są na Twoją kieszeń. 
-								Już od 39zł za 30 ml możesz wyjść z Beatris z pięknymi perfumami. A nasza oferta? Mamy ponad 100 zapachów do wyboru - napewno znajdziesz coś dla siebie.</p>
-						</div>
+							<p>W Beatris wiemy, że to kobieta zdobi perfumy a nie na odwrót. 
+								Zapachy w naszej ofercie są inspirowane najpiękniejszymi perfumami na świecie i znalazły się na półkach wielu polek.
+							</p>
+							<p></p>Od lat użytkujemy pefumy Tanellis i to zauroczenie przeistoczyło się w chęć dzielenia się z innymi.
+							Stąd właśnie powstał pomysł na nasz lokal. Zapraszamy, przekonaj się, że najpiękniejsze zapachy świata są na Twoją kieszeń. 
+								Już od <strong><span style="color: green">39zł za 30 ml</span></strong> możesz wyjść z Beatris z pięknymi perfumami. A nasza oferta? Mamy ponad 100 zapachów do wyboru - napewno znajdziesz coś dla siebie.</p>
+								
+							</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic01.jpg" /></span>
 						</div>
+					</div>
+
+					<div class="row gtr-150">
+						<div class="col-6 col-12-medium imp-medium">
+							<span class="image fit"><img src="images/pick.jpg" alt="kobieta kupująca perfumy Beatris" /></span>
+						</div>
+
+						<div class="col-6 col-12-medium">
+							<p>Znajdzie u nas każde nuty zapachowe.
+								Są to między innymi takie zapachy jak:</p>
+							<ul>
+								<li><b>Aldehydowe:</b> Charakteryzują się obecnością nut aldehydowych, które nadają im świeżości i lekkości. Są często wykorzystywane w perfumach klasycznych, kojarzą się z elegancją i czystością.</li>
+								<li><b>Aromatyczne:</b> Oparte na ziołowych i zielnych nutach, takich jak lawenda, szałwia czy rozmaryn. Tworzą wrażenie świeżości i są często stosowane w męskich zapachach.</li>
+								<li><b>Drzewne:</b> Głównie oparte na ciepłych nutach drewna, takich jak cedr, sandałowiec czy paczula. Często są bogate i zmysłowe, dodając głębi perfumom.</li>
+								<li><b>Fougere:</b> Nazwa pochodzi od francuskiego słowa "paproć". Zapachy te łączą lawendę, mech dębowy i kumarynę, tworząc kompozycje eleganckie i klasyczne, najczęściej dla mężczyzn.</li>
+								<li><b>Cytrusowe:</b> Dominują w nich lekkie i rześkie nuty cytrusów, takich jak pomarańcza, cytryna czy bergamotka. Idealne na lato, dają wrażenie energii i świeżości.</li>
+								<li><b>Kwiatowe:</b> Skupione wokół kwiatowych nut, takich jak róża, jaśmin czy fiołek. Mogą być delikatne i romantyczne lub bogate i intensywne, zależnie od użytych składników.</li>
+								<li><b>Orientalne:</b> Cechują się bogatymi, ciepłymi nutami przypraw, wanilii i balsamicznych żywic. Są zmysłowe i często używane w bardziej wieczorowych kompozycjach.</li>
+								<li><b>Szyprowe:</b> Charakterystyczne przez połączenie nut cytrusowych z mchem dębowym i paczulą. Są eleganckie i uniwersalne, stosowane zarówno w męskich, jak i damskich zapachach.</li>
+								<li><b>Wodne:</b> Przywodzą na myśl świeżość oceanu lub czystość deszczu, z nutami akordów wodnych i ozonowych. Lekkie i rześkie, idealne na codzienne użycie.</li>
+							</ul>
+						</div>
+						
 					</div>
 				</div>
 			</section>
@@ -70,6 +96,15 @@
 					</div>
 				</div>
 			</section>
+
+		<!-- girl-->
+		<section id="girl" class="main style2">
+			<div class="container">
+				<div class="row gtr-150">
+					<img src="images/lady.jpg" class="lady" alt="">
+				</div>
+			</div>
+		</section>	
 
 		<!-- Three -->
 			<section id="three" class="main style1 special">
