--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner">
 					<!-- <span class="icon solid major fa-cloud"></span> -->
-					<img src="images/logo_red_black_red700w.png" alt="beatris logo" width="700">
+					<img src="images/logo_red_black_red700w.png" alt="beatris logo" width="50vw">
 					<h1>Perfumeria</h1>
 					<p>Perfumy Tanellis i ręcznie robiona biżuteria</p>
 					<ul class="actions special">
@@ -101,7 +101,7 @@
 		<section id="girl" class="main style2">
 			<div class="container">
 				<div class="row gtr-150">
-					<img src="images/lady.jpg" class="lady" alt="">
+					<img src="images/lady.jpg" class="lady" alt="" width="105vw">
 				</div>
 			</div>
 		</section>	
