--- a/index.html
+++ b/index.html
@@ -98,14 +98,15 @@
 			</section>
 
 		<!-- girl-->
-		<section id="girl" class="main style2">
+		<img src="images/lady.jpg" class="lady" alt="">
+<!-- 		<section id="girl" class="main style2">
 			<img src="images/lady.jpg" class="lady" alt="" width="105vw">
 			<div class="container">
 				<div class="row gtr-150">
 					
 				</div>
 			</div>
-		</section>	
+		</section>	 -->
 
 		<!-- Three -->
 			<section id="three" class="main style1 special">
