--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner">
 					<!-- <span class="icon solid major fa-cloud"></span> -->
-					<img src="images/logo_red_black_red700w.png" alt="beatris logo" width="50vw">
+					<img src="images/logo_red_black_red700w.png" alt="beatris logo" class="logo-main">
 					<h1>Perfumeria</h1>
 					<p>Perfumy Tanellis i ręcznie robiona biżuteria</p>
 					<ul class="actions special">
