--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<!-- <span class="icon solid major fa-cloud"></span> -->
 					<img src="images/logo_red_black_red700w.png" alt="beatris logo" class="logo-main">
 					<h1>Perfumeria</h1>
-					<p>Perfumy Tanellis i ręcznie robiona biżuteria</p>
+					<p>Perfumy inspirowane oryginalnością i ręcznie robiona biżuteria</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Sprawdź więcej</a></li>
 					</ul>
@@ -33,13 +33,13 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Perfumy Tanellis<br />
+								<h2>Perfumy lane<br />
 								trwałe magiczne zapachy w rozsądnej cenie</h2>
 							</header>
 							<p>W Beatris wiemy, że to kobieta zdobi perfumy a nie na odwrót. 
 								Zapachy w naszej ofercie są inspirowane najpiękniejszymi perfumami na świecie i znalazły się na półkach wielu polek.
 							</p>
-							<p></p>Od lat użytkujemy pefumy Tanellis i to zauroczenie przeistoczyło się w chęć dzielenia się z innymi.
+							<p></p>Od lat użytkujemy pefumy inspirowane i to zauroczenie przeistoczyło się w chęć dzielenia się z innymi.
 							Stąd właśnie powstał pomysł na nasz lokal. Zapraszamy, przekonaj się, że najpiękniejsze zapachy świata są na Twoją kieszeń. 
 								Już od <strong><span style="color: green">39zł za 30 ml</span></strong> możesz wyjść z Beatris z pięknymi perfumami. A nasza oferta? Mamy ponad 100 zapachów do wyboru - napewno znajdziesz coś dla siebie.</p>
 								
