--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								
 							</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/tanellis-perfumy-beatris.png" alt="beatris perfumy męski damski stojące na półce"/></span>
+							<span class="image fit"><img src="images/bottle-perfumy-lane.png.png" alt="beatris perfumy męski damski stojące na półce"/></span>
 						</div>
 					</div>
 
