--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.instagram.com/bielakbeata88/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.youtube.com/@Beatrisgdynia" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 					<li><a href="mailto:bielakbeata88@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
