--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
 				<ul class="icons">
 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/bielakbeata88/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.tiktok.com/@beatrisgdynia" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
+					
 					<li><a href="https://www.youtube.com/@Beatrisgdynia" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 					<li><a href="mailto:bielakbeata88@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
