--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/beatrisgdynia" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/bielakbeata88/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="https://www.tiktok.com/@beatrisgdynia" class="icon brands alt fa-tiktok"><span class="label">TikTok</span></a></li>
 					
