--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<h3>W środku</h3>
-							<p>W lokalu znajdziecie mnie, Beatę - zapraszam! Będę na Ciebie czekać między 10:00 a 17:00 w tygodniu oraz od 10:00 d0 14:00 w soboty.</p>
+							<p>W lokalu znajdziecie mnie, Beatę - zapraszam! Będę na Ciebie czekać między 10:00 a 17:00 w tygodniu od poniedziałku do piątku.</p>
 							
 						</div>
 					</div>
