--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<div class="inner">
 					<!-- <span class="icon solid major fa-cloud"></span> -->
 					<img src="images/logo_red_black_red700w.png" alt="beatris logo" class="logo-main">
-					<h1>Perfumeria</h1>
-					<p>Perfumy inspirowane oryginalnością i ręcznie robiona biżuteria</p>
+					<h1>Perfumeria & Biżuteria</h1>
+					<p>Perfumy inspirowane oryginalnością i biżuteria</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Sprawdź więcej</a></li>
 					</ul>
