--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 							</ul>
 						</div>
 						
+						<!-- PDF -->
+						<div>
+							<a href="./assets/css/files/Beatris PERFUMY SKLEP.pdf">Baza perfum</a>a
+						</div>
+						
 					</div>
 				</div>
 			</section>
