--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 						</div>
 						
 						<!-- PDF -->
-						<div>
-							<a href="./assets/css/files/Beatris PERFUMY SKLEP.pdf">Baza perfum</a>a
+						<div class="perfume-base-btn">
+							<a href="./assets/css/files/Beatris PERFUMY SKLEP.pdf">Sprawdź bazę perfum</a>
 						</div>
 						
 					</div>
