--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 						</div>
 						
 						<!-- PDF -->
-						<div class="perfume-base-btn">
-							<a href="./assets/css/files/Beatris PERFUMY SKLEP.pdf">Sprawdź bazę perfum</a>
+						<div>
+							<a class="perfume-base-btn" href="./assets/css/files/Beatris PERFUMY SKLEP.pdf">Sprawdź bazę perfum</a>
 						</div>
 						
 					</div>
