--- a/index.html
+++ b/index.html
@@ -108,6 +108,11 @@
 							<p>Pomimo tego, że mamy wiele wzorów i kolorów do wyboru każdy wisiorek czy para kolczyków jest inna więc masz pewność, że nikt inny nie będzie miał takiego samego zestawu jak Ty. Poczuj się wyjątkowo z naszą biżuterią.</p>
 						</div>
 					</div>
+
+					<!-- PDF -->
+						<div>
+							<a class="perfume-base-btn" href="./assets/css/files/Baza biżuterii_compressed.pdf">Sprawdź bazę biżuterii</a>
+						</div>
 				</div>
 			</section>
 
