--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 					<!-- PDF -->
 						<div>
-							<a class="perfume-base-btn" href="./assets/css/files/Baza biżuterii_compressed.pdf">Sprawdź bazę biżuterii</a>
+							<a class="perfume-base-btn" href="./assets/css/files/perfumy.pdf">Sprawdź bazę biżuterii</a>
 						</div>
 				</div>
 			</section>
@@ -195,4 +195,5 @@
 
 	</body>
 </html>
+
 
