--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 			</section>
 
 		<!-- Scripts -->
+			<script src="assets/js/pricing.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
@@ -195,6 +196,7 @@
 
 	</body>
 </html>
+
 
 
 
