--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 								Już od <strong><span style="color: green">16zł za 10 ml</span></strong> możesz wyjść z Beatris z pięknymi perfumami. A nasza oferta? Mamy ponad 100 zapachów do wyboru - napewno znajdziesz coś dla siebie.</p>
 								
 							</div>
+							<div class="pricing"></div>
+						
 						<div class="col-6 col-12-medium imp-medium">
 							<span class="image fit"><img src="images/bottle-perfumy-lane.png" alt="beatris perfumy męski damski stojące na półce"/></span>
 						</div>
@@ -196,6 +198,7 @@
 
 	</body>
 </html>
+
 
 
 
